# ethereum-forum

./: .cursorrules  CONTRIBUTING.md  README.md
app/: .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  compose.yml  config.toml  shell.nix
app/.sqlx/: query-06a8a6d349370f80702f05079c1a05938f40f6a5efc5c3d29002d804a8e9932b.json  query-081a4797e3feecec4040e3aadcb9560516ba89747f4f083895f399e06c520b70.json  query-0981627d851696aa548f0500a8d305424733eff941bc3f381e63e24030a870da.json  query-171739e30e1c94b356e2322fd24fe2b6d33889d9f2b24f6a03406eaebb1d27c3.json  query-2208013472195a8f752fbaeca4d024d5119bd11ee888e4ec78d1962ea3b25eaa.json  query-221e823b99da2c6916f07c7d44dac28eb421222908b95bf5a7a6bfe69f57f285.json  query-29bca01b4826383b3a18dc17b0bc945ad6c9eeb9e928b4c651294fa02da08e7d.json  query-40fb7156d640bbc0d909c6268532d7fd46311a293d2e06433557d3848a6f7eb3.json  query-412a05bb4ad5b5ad081b9fdc3687af741c42315149cdebb47f010c6178c277f3.json  query-4167471ec72e5842488802762484be4bcb9f8f5e3c1266cbdc0594f4a4e2164b.json  query-449a4e93461c84d6b9099379ca2427789437ef7fef554786db5a880c0c534f46.json  query-494481d65f5783f1ee672dcefb79b8b7f9425672cfe470ee2d2df33150512d7d.json  query-536c79ffda3f889b20dfad35b4eae2a1af4f64aeee814953da28ef19c993b1ff.json  query-5560915a2a6c5eec95f14ee15ace6526b18e39e50169c1cd7a22c96958a949cf.json  query-597e625f04d0026d4a3bdf5e0b42675979be4fcaf9c87aa2e0c4b3ed609e1dfb.json  query-5fb6a3e4918304aa8cddf0f84a34b2a705a82a9fc837f0f81b18ef8968cb835b.json  query-620105c1446148f4d6d8ee3751d80d3e530dc3e2c920f3bf63af48825cde9dac.json  query-6a2c91563484931a26a28a1582dec5860393c0afede94f3573eff92b3d7f2687.json  query-72dfcfced0ceb48bc24c2d6e99e9d5633b005f234be37181431fdb54db2e1dc8.json  query-73e544dba95c51f0a157003db35d4f9bca6a300ebd8b0283c6799b4a4ad1904a.json  query-791b99a29bdb88620a9f58083290270b440487f4cfb27a236b7a7a0787f9bf4e.json  query-83274655c568503764572b2151d4ac0406698c26422da3d8da539b357eb9a9b5.json  query-871abd55acfe2d08e51ac1d11e58939c6a5924320017812df75479ea235bebfc.json  query-8dbdce8ffda4c1fee2b01573982c18c955d384997ca06664a2a05c9056c9c809.json  query-936e22e95df1711a9f8c012f1ecc23bd2023e10daca565f55c9becbfef64750b.json  query-9c690b90de99f6ffd4194cec4e6d4b819a771f0e3cfff5bb86f4ffffb643dcce.json  query-a9194ed17aa6bd2ba8ff7231dfbc3ff660f3035315a6dcc6baa32048d4a6efde.json  query-ad1f0a771dbfd47a195dc37c9e4e96726cdb5306dfd346345bee3532dd63184a.json  query-b6339f870a685404dd21432c0a362fe9d7f5c001aa90b64ff541c5846af03a42.json  query-bab52127c9645696df02c428465ba1f58e7b8545c21b8752cd21fd9b2e90b248.json  query-be9d16594836cfd40554bd7f4098763f13725fb71bbb56ca81e6c1373b91f658.json  query-bf96d00d7ea3d2ec862858f1aa369796eb185aa75ea4487ea0f23d10f8b48283.json  query-c0c8a0e95deba1c3817d4c8a2f9a6a83629e5d2cd03cae3bed89ed91b51abb03.json  query-cb4b4f8003c1e1ef1fcad113a558e97cdcf84b4f4295618eec5e0ccbaf2272aa.json  query-ccfae93fb9cd062107f7cd46bf55ac66b66fabef987a1c95e3bda407a43f416d.json  query-cd60c67394c622fd69b02eea79ffcef3e8a34aaa0b0d27d6713f68b506f05a81.json  query-cf734fe10b10ad6dcb1659f9a5ae40798357cfb8ecec9ea0524f3ecb7e29181e.json  query-d3fb155b250427eaf630dfb1ff3e52fdb2704216103a18d6f51dbd6a835e00cf.json  query-dbf64e4ef9832d5e328f63f1d5e3b1ebda64f39c1b35194f14069a4584a1c7ce.json  query-de85bd4bb7066727ae33d62e6fc1535e1bf23493070480e84e81919ddfb745ec.json  (+3 more)
app/migrations/: 0001_init.sql  0002_post_extra.sql  0003_post_number.sql  0004_post_created.sql  0005_calendar_issues.sql  0006_llm_topic_summaries.sql  0007_workshop_messages.sql  0008_rework_users.sql  0009_workshop_user_id.sql  0010_upgrade_workshop_messages.sql  0011_token_usage_tracking.sql  0012_dimensional_discourse.sql  0013_add_unique_constraints.sql
app/src/: database.rs  main.rs  state.rs
app/src/models/: discourse.rs  ical.rs  mod.rs
app/src/models/discourse/: latest.rs  mod.rs  topic.rs  user.rs
app/src/models/ical/: meetings.rs  mod.rs  rich.rs
app/src/models/pm/: mod.rs
app/src/models/topics/: mod.rs  post.rs
app/src/models/user/: mod.rs
app/src/models/workshop/: chat.rs  message.rs  mod.rs  (+2 more)
app/src/modules/: mod.rs
app/src/server/: admin.rs  auth.rs  index.html  mcp.rs  mod.rs  opengraph.rs  ratelimit.rs
app/src/tmp/: mod.rs
(+128 files in other folders)
