[package]
name = "ethereum-forum"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-std = { version = "1.13", features = ["attributes", "tokio1"] }
async-trait = "0.1"
chrono = { version = "0.4.39", features = ["clock", "now", "serde"] }
dotenvy = "0.15.0"
figment = { version = "0.10.19", features = ["env", "serde_json", "toml"] }
futures = "0.3.31"
governor = "0.8.1"
icalendar = { version = "0.16.13", features = [
  "chrono-tz",
  "serde",
  "serde_json",
] }
moka = { version = "0.12.10", features = ["future"] }
openai = { version = "1.1.0", default-features = false, features = ["rustls"] }
opentelemetry = { version = "0.28.0", features = ["trace"] }
opentelemetry-http = "0.28.0"
opentelemetry-otlp = { version = "0.28.0", features = [
  "grpc-tonic",
  "metrics",
  "trace",
] }
opentelemetry-prometheus = "0.28.0"
opentelemetry-semantic-conventions = "0.28.0"
opentelemetry-stdout = "0.28.0"
opentelemetry_sdk = { version = "0.28.0", features = ["rt-async-std", "trace"] }
poem = { version = "3.1.7", features = [
  "opentelemetry",
  "rustls",
  "sse",
] }
poem-openapi = { version = "5.1.7", features = [
  "chrono",
  "email",
  "email_address",
  "redoc",
  "sqlx",
  "static-files",
  "url",
  "uuid",
] }
poem-mcpserver = { version = "0.2.4", features = ["streamable-http"] }
schemars = "0.9"
regex = "1.11.1"
reqwest = { version = "0.12.5", default-features = false, features = [
  "charset",
  "http2",
  "json",
  "macos-system-configuration",
  "rustls-tls",
] }
rrule = { version = "0.14.0", features = ["serde"] }
rustls = "0.23.19"
serde = { version = "1.0", features = ["serde_derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.3", features = [
  "chrono",
  "ipnetwork",
  "json",
  "postgres",
  "runtime-async-std",
  "tls-rustls",
  "uuid",
] }
tracing = { version = "0.1.40", features = ["attributes"] }
tracing-opentelemetry = { version = "0.29.0" }
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
jsonwebtoken = "9.3.0"
urlencoding = "2.1.3"
url = "2.5.4"
meilisearch-sdk = "0.28.0"
strip-tags = "0.1.0"
# openidconnect = { version = "4", default-features = false, features = ["rustls-tls"] }
